k8s/asl-dev/deployment.yaml
# Service deployment yml file configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-management-deployment
  namespace: default
  labels:
    app: data-management-deployment
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: data-management-deployment
  template:
    metadata:
      labels:
        app: data-management-deployment
    spec:
      containers:
        - name: data-management-container
          image: gcr.io/clus-demo/data-management-default-1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: data-management-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: data-management-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30104
