k8s/asl-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  annotations:
    kubernetes.io/ingress.global-static-ip-name: staticip
    networking.gke.io/managed-certificates: "ssl-acc"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: www.clusdemo.co.in
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: data-management-service
            port:
              number: 3000
